# rusted-christmas-tree

./: Cargo.toml
models/: tree.mtl
src/: camera.rs  drawable.rs  fps_calculator.rs  lights.rs  main.rs  material.rs  model.rs  observer.rs  shader.rs  triangle.rs
src/coords/: mod.rs
src/xmas_tree/: baubles.rs  bombs.rs  ground.rs  mesh.rs  mod.rs  scene.rs  snow.rs  static_object.rs  tree.rs
src/xmas_tree/shaders/: snow.vert  static.frag  static.vert
