[package]
name = "rusted-christmas-tree"
version = "0.1.0"
authors = ["Jacek Bilski <jacek@bilski.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
gl = "0.14.0"
glfw = "0.37.0"
rand = {version = "0.7.3", features = ["small_rng"]}

[dev-dependencies]
rstest = "0.6.3"
